@@ -1,0 +1,3 @@
+/home:lustre:/home:90
+/g/g1:fruity.bar.z:/vol/2/4:0
+/g/g2:pebbles.foo.org:/:0
